--- a/client/src/components/button.css
+++ b/client/src/components/button.css
@@ -1,4 +1,8 @@
-button {
+/* button {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
     background-color: #A5C9CA;
     border:  none;
     border-radius: 20px;
@@ -7,4 +11,40 @@ button {
     cursor: pointer;
     display: block;
     margin-top: 1em;
-}
+} */
+
+.Button {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    background-color: #A5C9CA;
+    border:  none;
+    border-radius: 20px;
+    height: 2em;
+    width: 10em;
+    cursor: pointer;
+    display: block;
+    margin-top: 1em;
+  }
+  .Button:hover {
+    background-color: #E7F6F2;
+  }
+  .Button.large {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    background-color: #A5C9CA;
+    border:  none;
+    border-radius: 1rem;
+    height: 5rem;
+    width: 20rem;
+    cursor: pointer;
+    display: block;
+    margin-top: 1em;
+    font-size: 2rem;
+  }
+  .Button.large:hover {
+    background-color: #E7F6F2;
+  }
