--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -1,5 +1,5 @@
 footer {
-    height: auto;
+    height: 20vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -14,3 +14,12 @@ footer img {
     padding: 0;
   }
   
+a {
+    text-decoration: none;
+    color: #E7F6F2;
+}
+
+a:visited {
+    text-decoration: none;
+    color: #E7F6F2;
+}
