--- a/client/src/components/main.css
+++ b/client/src/components/main.css
@@ -1,4 +1,5 @@
 main {
     height: 90vh;
-    background-image: url(../../public/wiejskipieczarki.jpg);
+    background: #395B64;
+    /* background-image: url(../../public/wiejskipieczarki.jpg); */
 }
