--- a/client/src/components/recipethumbnail.css
+++ b/client/src/components/recipethumbnail.css
@@ -1,14 +1,22 @@
 
 #thumbnail {
     width: 200px;
-    height: auto; 
+    height: 250px; 
     border: 1px solid black;
     background: #2C3333;
     box-shadow: 10px 10px 5px #E7F6F2;
-    border-radius: 20px
+    border-radius: 20px;
+    margin: 1rem;
 }
 
-#thumbnailimg {
+#thumbnail_img {
+    height: 100px;
+    width: 200px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    background-image: url(../../public/wiejskipieczarki.jpg);
+}
+#thumbnailimg img {
     height: 50px;
     width: 100%;
 }
@@ -17,4 +25,20 @@
     border: none;
     background: none;
     color: #E7F6F2;
+}
+
+#thumbnail_name h3 {
+font-size: 1em;
+padding: 0;
+margin: 0;
+}
+
+#thumbnail_macros h5 {
+    font-size: 0.75em;
+    padding: 0;
+    margin: 0;
+}
+
+#thumbnail_macros  {
+    font-size: 0.95em;
 }
