--- a/client/src/components/recipethumbnail.css
+++ b/client/src/components/recipethumbnail.css
@@ -4,7 +4,6 @@
     height: 250px; 
     border: 1px solid black;
     background: #2C3333;
-    box-shadow: 10px 10px 5px #E7F6F2;
     border-radius: 20px;
     margin: 1rem;
 }
@@ -14,7 +13,6 @@
     width: 200px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
-    background-image: url(../../public/wiejskipieczarki.jpg);
 }
 #thumbnail_img img {
     height: 100px;
@@ -25,8 +23,10 @@
 
 #thumbnailbutton {
     border: none;
+    border-radius: 20px;
     background: none;
     color: #E7F6F2;
+    padding: 0;
 }
 
 #thumbnail_name h3 {
