--- a/client/src/components/recipe.css
+++ b/client/src/components/recipe.css
@@ -9,6 +9,7 @@
     background-color: #2C3333;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
+    margin-top: 1rem;
   }
   
   #recipe_header {
