--- a/client/src/components/howto.css
+++ b/client/src/components/howto.css
@@ -1,8 +1,10 @@
+@import url(../colors.css);
+
 #howto_main_div {
-    background-color: #395B64;
+    background-color: var(--primary-color);
     height: 20vh;
     width: 100%;
-    background-color: #395B64;
+    background-color: var(--primary-color);
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -12,12 +14,12 @@
   #howto_choosecategory_div, #howto_thinkabouthwattoeat_div, #howto_addtoplanner_div, #howto_printout_div{
     height: 200px;
     width: 200px;
-    background-color: #A5C9CA;
+    background-color: var(--secondary-color);
   }
   
   #howto_choosecategory_div:hover, #howto_thinkabouthwattoeat_div:hover, #howto_addtoplanner_div:hover, #howto_printout_div:hover {
     height: 200px;
     width: 200px;
-    background-color: #E7F6F2;
+    background-color: var(--light-color);;
     color: black
   }
