--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -18,23 +18,26 @@
   color: var(--dark-color);
 }
 
-#menu {
+#menu_header {
   align-self: flex-end;
   position: absolute;
   margin-top: 0;
   padding: 0;
 }
 
-#menu a {
+#menu_header a {
     color: var(--secondary-color);
+    text-decoration: none;
 }
 
-#menu a:hover {
+#menu_header a:hover {
     color: var(--light-color);
+    text-decoration: none;
 }
 
 #header_description {
-  margin-top: 20px;
+  margin-top: 100px;
+  margin-left: 50px;
   margin-bottom: 20px;
   font-size: 2.5rem;
   text-align: left;
